apps/demo-websocket/k8s/base/k8s-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: clouddns
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "websocket-service"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services : "websocket-service"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
  name: ingresser
  namespace: development
spec:
  rules:
  - host: demo.ftx.dev.muwazana.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-websocket
          servicePort: http
      - path: /ws
        backend:
          serviceName: websocket-service
          servicePort: http
  tls:
  - hosts:
    - '*.ftx.dev.muwazana.com'
    secretName: letsencrypt-certificate-ingresser
